# AmazingPrinterController

./: .gitignore  AmazingPrinterController.cbp  AmazingPrinterController.depend  AmazingPrinterController.layout  CMakeLists.txt  CMakePresets.json  README.md  todo  vcpkg.json
include/: AppSettings.hpp  Application.h  CoordinatePanel.h  CoordinatePanel.hpp  DataManager.hpp  GRBLManager.h  GrblConfigDialog.h  GrblConfigDialog.hpp  GrblController.h  GrblController.hpp  GrblScanWindow.h  GrblScanWindow.hpp  GrblTypes.hpp  JsonHandler.hpp  MainFrame.h  MainFrame.hpp  ScanHandler.hpp  SerialPortManager.h  SerialPortManager.hpp  main.h
src/: Application.cpp  CoordinatePanel.cpp  DataManager.cpp  GRBLManager.cpp  GrblConfigDialog.cpp  GrblController.cpp  GrblScanWindow.cpp  JsonHandler.cpp  MainFrame.cpp  SaveStateHandler.cpp  ScanHandler.cpp  SerialPortManager.cpp  main.cpp
